--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portal de Registro de Clientes MovingFood - Formulario oficial para la creación y solicitud de nuevos puntos de venta."
+      content="Plataforma de Registro MovingFood"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/MF.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nuevo Cliente MF</title>
+    <title>Plataforma de Registro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
